--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <html>
 <head link:a.css>
   <script type="text/javascript"> 
 <!--
@@ -34,9 +36,9 @@ background-size: cover;
  .custom-button {
    width: 500px;
    /* Adjust the width as needed */
-   height: 150px;
+   height: 500px;
    /* Adjust the height as needed */
-   font-size: 18px;
+   font-size: 150px;
    /* Optional: adjust the font size */
  }
  body.data
