--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<head link:a.css>
+<head>
+   <link rel="stylesheet" href="style.css">
   <script type="text/javascript"> 
 <!--
 function yes() {
