--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ background-size: cover;
 
 <body class="data">
  <div class="bg">
-    <b style="font-size: 100px;"><b>Will You Be My Girlfriend ? <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDA1ZTlzdnJlMGYxMXk4c2IzbDJiNHM0OGtjNmxydnE1aGZtaHZ1aSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/26BRv0ThflsHCqDrG/giphy.webp" alt="Computer man" style="width:48px;height:48px;">
+    <b style="font-size: 100px;"> <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDA1ZTlzdnJlMGYxMXk4c2IzbDJiNHM0OGtjNmxydnE1aGZtaHZ1aSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/26BRv0ThflsHCqDrG/giphy.webp" alt="Computer man" style="width:48px;height:48px;">
+    </b></p><b>Will You Be My Girlfriend ? <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDA1ZTlzdnJlMGYxMXk4c2IzbDJiNHM0OGtjNmxydnE1aGZtaHZ1aSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/26BRv0ThflsHCqDrG/giphy.webp" alt="Computer man" style="width:48px;height:48px;">
     </b></p>
     <input type="button" onclick="yes()" value="yes">
     <input type="button" onclick="no()" value="no">
