--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript">
       function yes() {
-        alert("THANK YOU THANK YOU BABY!!!! I'll do everything to make you happy, kahit pa need kong baguhin sarili ko for the good mwamwamwaaaa Thank you Thank you im so HAPPPPY RIGHT NOOOOOOWWWW!!!!");
+        alert("I LOVE YOU");
       }
   
       function no() {
