--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDA1ZTlzdnJlMGYxMXk4c2IzbDJiNHM0OGtjNmxydnE1aGZtaHZ1aSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/26BRv0ThflsHCqDrG/giphy.webp" alt="Heart" style="width:48px;height:48px;">
       </div>
       <div class="button-container">
-        <input type="button" class="custom-button" onclick="yes()" value="Yes">
+        <input type="button" id="yesButton"class="custom-button" onclick="yes()" value="Yes">
         <input type="button" id="noButton" class="custom-button" onclick="moveButton(); no();" value="No">
       </div>
     </div>
