--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript">
       function yes() {
-        alert("Mahal, sorry kung natagalan bago ako nag ask, Thank you for being patient and there all the times and kahit nag kakasagutan us, nandyan kaparin. Im not a deep person you know, madali akong makalimot,magkamali,mababaw and childish but i'll do my best to give you the best version of me to give you all the love you deserve.- justin ");
+        alert("Mahal, sorry kung natagalan bago ako nag ask, Thank you for being patient and there all the times and kahit nag kakasagutan us, nandyan kaparin. Im not a deep person you know, madali akong makalimot,magkamali,mababaw and childish but i'll do my best to give you the best version of me to give you all the love you deserve.               (Giving you everything is my goal; loving you is my will; and being with you forever is my choice.) - justin ");
       }
   
       function no() {
